--- a/back-end/bloco-26/dia-1/exercicio/my-scripts/package.json
+++ b/back-end/bloco-26/dia-1/exercicio/my-scripts/package.json
@@ -4,8 +4,10 @@
   "description": "calcula o IMC nas pessoas",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index"
+    "start": "node index",
+    "imc": "node imc.js",
+    "velocidade": "node velocidade.js",
+    "sorteio": "node sorteio.js"
   },
   "author": "Milena Chrysostomo Leme",
   "license": "ISC",
