bloco-26 dia-1 fazendo os exercicios 7, 8 e bonus

--- a/back-end/bloco-26/dia-1/exercicio/my-scripts/package.json
+++ b/back-end/bloco-26/dia-1/exercicio/my-scripts/package.json
@@ -7,7 +7,9 @@
     "start": "node index",
     "imc": "node imc.js",
     "velocidade": "node velocidade.js",
-    "sorteio": "node sorteio.js"
+    "sorteio": "node sorteio.js",
+    "fatorial": "node fatorial.js",
+    "fibonacci": "node fibonacci.js"
   },
   "author": "Milena Chrysostomo Leme",
   "license": "ISC",
